# ship-backend/domain/src/main/kotlin/com/sonicdevelopment/domain/model/values/HarborName.kt
@@ -1,4 +1,8 @@
 package com.sonicdevelopment.domain.model.values
 
 /** The unique name a Harbor is known by among all Harbors. */
-data class HarborName(val name: String)
+data class HarborName(val name: String) {
+    init {
+        require(name.isNotBlank()) { "A Harbor Name must not be blank" }
+    }
+}
